--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
   },
   "homepage": "https://github.com/revotechUET/plot-toolkit-2#readme",
   "dependencies": {
+    "lodash": "^4.17.15",
     "pixi.js": "^5.2.1",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
     "html-loader": "^0.5.5",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.3",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0"
