Add viewport, mousewheel manager, many others

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3": "^5.15.1",
     "lodash": "^4.17.15",
     "pixi.js": "^5.2.1",
+    "pixi.js-keyboard": "^1.0.9",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1"
   },
