--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w --env.MAIN=./src/main/vue-tut.js"
+    "start": "webpack -w --env.MAIN=./src/main/v-rect-demo.js"
   },
   "repository": {
     "type": "git",
