--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "plot-toolkit-2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack -w --env.MAIN=./src/main/v-rect-demo.js"
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/revotechUET/plot-toolkit-2#readme",
   "dependencies": {
     "d3": "^5.15.1",
+    "hard-source-webpack-plugin": "^0.13.1",
     "lodash": "^4.17.15",
     "pixi.js": "^5.2.1",
     "pixi.js-keyboard": "^1.0.9",
     "vue": "^2.6.11",
-    "vue-fragment": "^1.5.1"
+    "vue-fragment": "^1.5.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
