--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "pixi.js": "^5.2.1",
     "pixi.js-keyboard": "^1.0.9",
+    "proj4": "^2.6.2",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
     "webpack-dev-server": "^3.11.0"
@@ -36,7 +37,7 @@
     "style-loader": "^1.1.3",
     "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
