--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/revotechUET/plot-toolkit-2#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "d3": "^5.15.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "lodash": "^4.17.15",
@@ -27,6 +28,7 @@
     "proj4": "^2.6.2",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
+    "vuex": "^3.6.2",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
